# ChangeLog for media-video/kaffeine
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/kaffeine/ChangeLog,v 1.123 2012/06/30 01:20:52 creffett Exp $

  30 Jun 2012; <creffett@gentoo.org> kaffeine-1.2.2.ebuild,
  +files/kaffeine-1.2.2-gcc4.7.patch:
  Added patch to fix building with gcc 4.7, wrt bug 424057

  01 Jun 2011; Brent Baude <ranger@gentoo.org> kaffeine-1.2.2.ebuild:
  Marking kaffeine-1.2.2 ppc stable for bug 354033

  11 May 2011; Andreas K. Huettel <dilfridge@gentoo.org> -kaffeine-1.1.ebuild:
  Remove old

  09 May 2011; Markos Chandras <hwoarang@gentoo.org> kaffeine-1.2.2.ebuild:
  Stable on amd64 wrt bug #354033

  09 May 2011; Thomas Kahle <tomka@gentoo.org> kaffeine-1.2.2.ebuild:
  x86 stable per bug 354033

*kaffeine-1.2.2 (27 Apr 2011)

  27 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> -kaffeine-1.2.1.ebuild,
  +kaffeine-1.2.2.ebuild:
  Version bump to the latest.

  15 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> kaffeine-1.2.1.ebuild:
  Add missed keywords :/

*kaffeine-1.2.1 (07 Apr 2011)

  07 Apr 2011; Tomáš Chvátal <scarabeus@gentoo.org> +kaffeine-1.2.1.ebuild:
  Version bump to latest.

  02 Feb 2011; Theo Chatzimichos <tampakrap@gentoo.org> -kaffeine-1.0.ebuild,
  kaffeine-1.1.ebuild:
  EAPI3, remove old

  04 Jan 2011; Markos Chandras <hwoarang@gentoo.org> kaffeine-1.1.ebuild:
  Stable on amd64 wrt bug #346023

  03 Jan 2011; Thomas Kahle <tomka@gentoo.org> kaffeine-1.1.ebuild:
  x86 stable per bug 346023

*kaffeine-1.1 (05 Oct 2010)

  05 Oct 2010; Theo Chatzimichos <tampakrap@gentoo.org>
  +kaffeine-1.1.ebuild:
  Version bump

  18 Aug 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org> kaffeine-1.0.ebuild:
  x86 stable wrt bug #333021

  17 Aug 2010; Markos Chandras <hwoarang@gentoo.org> kaffeine-1.0.ebuild:
  Stable on amd64 wrt bug #333021

  14 Jun 2010; Samuli Suominen <ssuominen@gentoo.org> kaffeine-1.0.ebuild:
  Fix linguas.

*kaffeine-1.0 (10 Jun 2010)
