@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>video</herd>
-<herd>kde</herd>
-<maintainer>
-  <email>media-video@gentoo.org</email>
-</maintainer>
-<maintainer>
-  <email>kde@gentoo.org</email>
-</maintainer>
+	<herd>video</herd>
+	<herd>kde</herd>
+	<upstream>
+		<remote-id type="sourceforge">kaffeine</remote-id>
+	</upstream>
 </pkgmetadata>
