@@ -1,6 +1,9 @@
 # ChangeLog for media-video/kplayer
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/kplayer/ChangeLog,v 1.53 2012/06/02 11:57:28 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/kplayer/ChangeLog,v 1.54 2012/07/12 12:20:14 kensington Exp $
+
+  12 Jul 2012; Michael Palimaka <kensington@gentoo.org> metadata.xml:
+  Cleanup metadata.
 
   02 Jun 2012; Johannes Huber <johu@gentoo.org> -kplayer-0.7.1.ebuild:
   Remove old.
