@@ -1,6 +1,9 @@
 # ChangeLog for media-video/kaffeine
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/kaffeine/ChangeLog,v 1.123 2012/06/30 01:20:52 creffett Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/kaffeine/ChangeLog,v 1.124 2012/07/12 12:26:47 kensington Exp $
+
+  12 Jul 2012; Michael Palimaka <kensington@gentoo.org> metadata.xml:
+  Cleanup metadata.
 
   30 Jun 2012; <creffett@gentoo.org> kaffeine-1.2.2.ebuild,
   +files/kaffeine-1.2.2-gcc4.7.patch:
@@ -525,4 +528,3 @@
   14 Aug 2003; Sergey Kuleshov <svyatogor@gentoo.org> kaffeine-0.3.2.ebuild:
   Added user submitted ebuild for Kaffeine, thus closing bug #23953. 
   Thanks to Anders Lind?n <connyosis@gmx.net> for the ebduild.
-
